调整页面代码，继续探索开发

--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,5 +1,9 @@
 <!--index.wxml-->
 <view class="container">
+  <view>
+    <image wx:if="{{!isLoadUser}}" class="user-avatar" src=""></image>
+    <image wx:else class="user-avatar" src="{{user.avatarUrl}}"></image>
+  </view>
   <view class="motto">
     <text class="user-motto">{{motto}}</text>
   </view>
