--- a/pages/me/me.wxss
+++ b/pages/me/me.wxss
@@ -1,18 +1,21 @@
 /* pages/me/me.wxss */
-#user-container {
+#user-container{
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 16rpx;
 }
 
 #user-avatar {
   width: 128rpx;
   height: 128rpx;
-  margin: 20rpx;
+  margin-top: 36rpx;
   border-radius: 50%;
 }
 
 #user-name {
-  color: #aaa;
+  margin: 16rpx;
   align-items: center;
+  color: #aaa;
 }
