--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,10 +1,8 @@
 <!--index.wxml-->
 <view class="container">
   <view>
-    <image wx:if="{{!isLoadUser}}" class="user-avatar" src=""></image>
-    <image wx:else class="user-avatar" src="{{user.avatarUrl}}"></image>
+    <image wx:if="{{!isLoadUser}}" class="user-avatar" src="../../public/res/ic_avatar.svg" bindtap="jumeMePage"></image>
+    <image wx:else class="user-avatar" src="{{user.avatarUrl}}" bindtap="jumeMePage"></image>
   </view>
-  <view class="motto">
-    <text class="user-motto">{{motto}}</text>
-  </view>
+  <text class="text-saying">{{saying}}</text>
 </view>
