--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,7 +1,8 @@
 <!--index.wxml-->
 <view class="container">
+  <nav></nav>
   <view>
-    <image wx:if="{{!isLoadUser}}" class="user-avatar" src="../../public/res/ic_avatar.svg" bindtap="jumeMePage"></image>
+    <image wx:if="{{!isLoadUser}}" class="user-avatar" src="../../public/image/ic_avatar.svg" bindtap="jumeMePage"></image>
     <image wx:else class="user-avatar" src="{{user.avatarUrl}}" bindtap="jumeMePage"></image>
   </view>
   <text class="text-saying">{{saying}}</text>
