--- a/app.wxss
+++ b/app.wxss
@@ -1,9 +1,8 @@
 /**app.wxss**/
+
 .container {
+  width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  box-sizing: border-box;
-} 
+}
