--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,5 +1,10 @@
 /**index.wxss**/
 
+.content-container{
+  background: darkolivegreen;
+}
+
+
 .user-avatar {
   position: absolute;
   bottom: 24rpx;
@@ -13,5 +18,6 @@
 }
 
 .text-saying{
+  margin-top: 200rpx;
   font-size: 24rpx;
 }
