--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,13 +1,18 @@
 <!--index.wxml-->
 <view class="container">
-  <view class="nav-container">
-    <nav></nav>
-  </view>
+  <!-- <view class="nav-container">
+    <nav navTitle="首页"></nav>
+  </view> -->
   <view class="content-container">
-    <view>
-      <image wx:if="{{!isLoadUser}}" class="user-avatar" src="../../public/image/ic_avatar.svg" bindtap="jumeMePage"></image>
-      <image wx:else class="user-avatar" src="{{user.avatarUrl}}" bindtap="jumeMePage"></image>
-    </view>
     <text class="text-saying">{{saying}}</text>
+
+
+    <view class="home-control">
+      <view>
+        <image wx:if="{{!isLoadUser}}" class="user-avatar" src="../../public/image/ic_avatar.svg" bindtap="jumeMePage"></image>
+        <image wx:else class="user-avatar" src="{{user.avatarUrl}}" bindtap="jumeMePage"></image>
+      </view>
+    </view>
   </view>
+
 </view>
