--- a/pages/me/me.wxss
+++ b/pages/me/me.wxss
@@ -1,6 +1,11 @@
 /* pages/me/me.wxss */
 
-.content-container{
+.container {
+  display: flex;
+  flex-direction: column;
+}
+
+.content-container {
   width: 100%;
   display: flex;
   flex-direction: column;
