--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,13 +1,13 @@
 <!--index.wxml-->
 <view class="container">
-  <!-- <view class="nav-container">
-    <nav navTitle="首页"></nav>
-  </view> -->
   <view class="content-container">
-    <text class="text-saying">{{saying}}</text>
+    <!-- 一句话 -->
+    <view class="saying-container">
+      <text class="text-saying">{{saying}}</text>
+    </view>
 
-
-    <view class="home-control">
+    <!-- 控制界面 -->
+    <view class="control-container">
       <view>
         <image wx:if="{{!isLoadUser}}" class="user-avatar" src="../../public/image/ic_avatar.svg" bindtap="jumeMePage"></image>
         <image wx:else class="user-avatar" src="{{user.avatarUrl}}" bindtap="jumeMePage"></image>
