--- a/app.wxss
+++ b/app.wxss
@@ -1,8 +1,9 @@
 /**app.wxss**/
 
 .container {
-  width: 100%;
-  height: 100%;
+  position: fixed;
   display: flex;
   flex-direction: column;
+  height: 100%;
+  width: 100%;
 }
