--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,19 +1,73 @@
 /**index.wxss**/
 
-.content-container {
-  display: block;
+.talk-container {
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  /* align-items: center; 水平居中 */
+  justify-content: center; /*垂直居中*/
   width: 100%;
   height: 100%;
 }
 
-.saying-container {
-  display: block;
-  width: 100%;
-  height: 100%;
-  background: #23d468;
+.talk-hitokoto-container {
+  display: flex;
+  flex-direction: column;
+  align-items: right;
+  padding: 24rpx;
 }
+
+.talk-quote-top, .talk-quote-bottom {
+  width: 36rpx;
+  height: 36rpx;
+  margin-top: 8rpx;
+  margin-bottom: 8rpx;
+}
+
+.talk-quote-bottom-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  width: 100%;
+}
+
+.talk-quote-bottom {
+  float: right;
+}
+
+.talk-decoration {
+  width: 100%;
+  height: 1rpx;
+  background: #d8d8d8;
+}
+
+.talk-hitokoto {
+  font-size: 36rpx;
+  margin-left: 28rpx;
+  margin-right: 28rpx;
+}
+
+/* 出处  */
+
+.talk-from-container {
+  position: fixed;
+  bottom: 144rpx;
+  width: 100%;
+  justify-content: center;
+  background: bisque;
+}
+
+.talk-from {
+  position: fixed;
+  width: 100%;
+  text-align: center;
+  font-size: 24rpx;
+}
+
+/* 控制部分 */
 
 .control-container {
+  position: fixed;
   display: block;
   width: 100%;
   height: 100%;
@@ -28,9 +82,4 @@
   border-radius: 50%;
   border: 1rpx solid #e0e0e0;
   background: #e8e8e8;
-}
-
-.text-saying {
-  margin-top: 200rpx;
-  font-size: 24rpx;
 }
