添加自定义下拉刷新组件和分享组件

--- a/pages/components/nav/nav.wxml
+++ b/pages/components/nav/nav.wxml
@@ -1,4 +1,4 @@
-<!--commpents/nav/nav.wxml-->
+<!--components/nav/nav.wxml-->
 <view class="nav-container">
   <view class="nav-statusbar"></view>
   <view class="nav-toolbar">
