--- a/pages/me/me.wxml
+++ b/pages/me/me.wxml
@@ -4,19 +4,10 @@
     <nav enableBack="true" navTitle="个人中心"></nav>
   </view>
   <view class="content-container">
-    <!-- 需要使用 button 来授权登录 -->
-    <block wx:if="{{!isLoadUser}}">
-      <button open-type="getUserInfo" bindgetuserinfo="getUserInfo">授权登录</button>
-    </block>
-    <block wx:else>
-      <!-- 如果只是展示用户头像昵称，可以使用 <open-data /> 组件 经测试，使用<open-data>无法修改样式 -->
-      <!-- <open-data id="user-avatar" type="userAvatarUrl"></open-data> -->
-      <!-- <open-data id="user-name" type="userNickName"></open-data> -->
-      <image id="user-avatar" src="{{user.avatarUrl}}"></image>
-      <text id="user-name">{{user.nickName}}</text>
-    </block>
-  </view>
-  <view class="me-list">
-    <button open-type="feedback">等待你的提议</button>
+    <refresh-view>
+      <block wx:for="{{colors}}" wx:for-index="index" wx:key="index">
+        <view class="test-color" style="background: {{item}}">{{index + 1}}. {{item}}</view>
+      </block>
+    </refresh-view>
   </view>
 </view>
