--- a/pages/components/nav/nav.wxss
+++ b/pages/components/nav/nav.wxss
@@ -12,21 +12,21 @@
 
 /* 状态栏 */
 .nav-statusbar {
-  height: 48rpx;
+  height: 24px;
 }
 
 /* 导航栏 */
 .nav-toolbar {
   display: flex;
   flex-direction: row;
-  height: 96rpx;
+  height: 40px;
 }
 
 /* 导航图标 */
 .nav-icon {
-  width: 48rpx;
-  height: 48rpx;
-  padding: 24rpx;
+  width: 24px;
+  height: 24px;
+  padding: 8px;
 }
 
 .nav-icon:active {
@@ -35,13 +35,13 @@
 
 
 .nav-space{
-  width: 24rpx;
-  height: 96rpx;
+  width: 8px;
+  height: 40px;
 }
 /* 标题 */
 .nav-title {
-  height: 96rpx;
-  line-height: 96rpx;
+  height: 40px;
+  line-height: 40px;
   font-size: 32rpx;
   font-weight: bold;
   color: #3c3c3c;
