--- a/pages/components/refresh-view/index.wxss
+++ b/pages/components/refresh-view/index.wxss
@@ -1,14 +1,17 @@
 /* pages/components/refresh-view/index.wxss */
 
 .refresh-view {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   width: 100%;
-  height: calc(100% + 48rpx);
+  height: 100vh;
   background: cadetblue;
 }
 
 .refresh-icon {
-  position: fixed;
-  width: 256rpx;
-  height: 256rpx;
+  width: 56rpx;
+  height: 56rpx;
   background: saddlebrown;
 }
