--- a/pages/components/refresh-view/index.wxss
+++ b/pages/components/refresh-view/index.wxss
@@ -3,15 +3,15 @@
 .refresh-view {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  height: 100vh;
-  background: cadetblue;
+}
+
+.refresh-icon-view {
+  position: relative;
+  top: 0;
+  text-align: center;
 }
 
 .refresh-icon {
-  width: 56rpx;
-  height: 56rpx;
-  background: saddlebrown;
+  width: 72rpx;
+  height: 72rpx;
 }
