--- a/pages/components/refresh-view/refresh.wxml
+++ b/pages/components/refresh-view/refresh.wxml
@@ -1,6 +1,6 @@
 <!--pages/components/refresh-view/index.wxml-->
-<scroll-view class="refresh-view" scroll-y="true" bindscroll="_onScroll" bindscrolltolower="_onScrollBottom" bindtouchstart="_onTouchStart" bindtouchend="_onTouchEnd" style="height:{{scrollHeight}}px">
-  <view class="refresh-view-top">
+<scroll-view class="refresh-view" scroll-y="true" bindscrolltoupper="_onScrollTop" bindscroll="_onScroll" bindscrolltolower="_onScrollBottom" bindtouchstart="_onTouchStart" bindtouchend="_onTouchEnd" style="height:{{scrollHeight}}px">
+  <view class="refresh-view-top" style="transform: translate3D(0, {{pullHeight}}px, 0)">
     <image class="refresh-icon" style="top:{{pullHeight}}px" src="../../../public/image/ic_loading.svg" />
   </view>
   <view bindtouchmove="_onTouchMove">
