--- a/pages/me/me.wxml
+++ b/pages/me/me.wxml
@@ -3,7 +3,7 @@
   <view class="page__hd" style="height:{{navHeight}}px">
     <nav enableBack="true" navTitle="个人中心个人中心个人中心个人中心个人中心个人中心" sbHeight="{{sbHeight}}"></nav>
   </view>
-  <refresh-view scrollHeight="{{scrollHeight}}">
+  <refresh-view scrollHeight="{{scrollHeight}}" isRefreshFinish="{{isRefreshFinish}}" bindonRefresh="_onRefresh">
       <block wx:for="{{colors}}" wx:for-index="index" wx:key="index">
         <view class="test-color" style="background: {{item}}">{{index + 1}}. {{item}}</view>
       </block>
