--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -73,8 +73,8 @@
   height: 100%;
 }
 
-.user-avatar {
-  position: absolute;
+.control-setting {
+  position: fixed;
   bottom: 36rpx;
   right: 36rpx;
   width: 56rpx;
