--- a/pages/components/refresh-view/refresh.wxml
+++ b/pages/components/refresh-view/refresh.wxml
@@ -1,8 +1,9 @@
 <!--pages/components/refresh-view/index.wxml-->
 <scroll-view class="refresh-view" scroll-y="true" bindscrolltoupper="_onScrollTop" bindscroll="_onScroll" bindscrolltolower="_onScrollBottom" bindtouchstart="_onTouchStart" bindtouchend="_onTouchEnd" style="height:{{scrollHeight}}px">
   <view class="refresh-view-top">
-    <view class="refresh-icon refresh-icon-{{pullStatus}}" style="top:{{pullHeight}}px">
-      <!-- <image src="../../../public/image/ic_loading.svg" /> -->
+    <view class="refresh-status refresh-{{pullStatus}}" style="top:{{pullHeight}}px">
+      <!-- <image class="refresh-icon" src="../../../public/image/ic_loading.svg" /> -->
+      <view class="refresh-icon"></view>
     </view>
   </view>
   <view bindtouchmove="_onTouchMove">
