--- a/pages/components/refresh/refresh.wxss
+++ b/pages/components/refresh/refresh.wxss
@@ -1,4 +1,4 @@
-/* pages/components/refresh-view/index.wxss */
+/* pages/components/refresh/refresh.wxss */
 
 .refresh-view {
   display: flex;
@@ -18,6 +18,7 @@
   width: 24px;
   height: 24px;
   padding: 8px;
+  background: #f8f8f8;
   border-radius: 50%;
   box-shadow: 0px 0px 20px #d8d8d8;
 }
@@ -34,18 +35,18 @@
   width: 0px;
   height: 0px;
   padding: 0px;
-  -webkit-animation: animNormal 300ms 1;
-  animation: animNormal 300ms 1;
+  -webkit-animation: animNormal 260ms 1;
+  animation: animNormal 260ms 1;
 }
 
 .refresh-pulling {
-  -webkit-animation: animPulling 300ms 1;
-  animation: animPulling 300ms 1;
+  -webkit-animation: animPulling 260ms 1;
+  animation: animPulling 260ms 1;
 }
 
 .refresh-refreshing {
-  -webkit-animation: animRefreshing 300ms ease-out 1;
-  animation: animRefreshing 300ms ease-out 1;
+  -webkit-animation: animRefreshing 260ms ease-out 1;
+  animation: animRefreshing 260ms ease-out 1;
 }
 
 .refresh-refreshing .refresh-icon {
@@ -55,7 +56,7 @@
 
 @keyframes animNormal {
   0% {
-    top: 60px;
+    top: 50px;
     width: 24px;
     height: 24px;
     box-shadow: 0px 0px 20px #d8d8d8;
@@ -87,7 +88,7 @@
   }
 
   100% {
-    top: 60px;
+    top: 50px;
   }
 }
 
