--- a/pages/setting/setting.wxml
+++ b/pages/setting/setting.wxml
@@ -3,9 +3,29 @@
   <view style="height:{{navHeight}}px">
     <nav enableBack="true" navTitle="设置" sbHeight="{{sbHeight}}"></nav>
   </view>
-  <refresh-view scrollHeight="{{scrollHeight}}" isRefreshFinish="{{isRefreshFinish}}" bindonRefresh="onRefresh">
-      <block wx:for="{{colors}}" wx:for-index="index" wx:key="index">
-        <view class="test-color" style="background: {{item}}">{{index + 1}}. {{item}}</view>
-      </block>
-  </refresh-view>
+  <!-- 列表项 -->
+  <view class="weui-cells__title">带跳转的列表项</view>
+  <view class="weui-cells weui-cells_after-title">
+    <navigator url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+      <!-- <button class="weui-cell__bd" open-type="feedback">意见反馈</button> -->
+      <view class="weui-cell__bd" open-type="feedback">意见反馈</view>
+      <view class="weui-cell__ft weui-cell__ft_in-access"></view>
+    </navigator>
+  </view>
+
+  <view class="weui-cells__title">带说明、跳转的列表项</view>
+  <view class="weui-cells weui-cells_after-title">
+    <picker bindchange="bindPickerChange" value="{{index}}" range="{{objectArray}}" range-key="name">
+      <navigator url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+        <view class="weui-cell__bd">一言分类</view>
+        <view class="weui-cell__ft weui-cell__ft_in-access">{{objectArray[index].name}}</view>
+      </navigator>
+    </picker>
+  </view>
+
+
+
+  <view class="weui-footer weui-footer_fixed-bottom">
+    <view class="weui-footer__text">Copyright © 2018 vmloft.com</view>
+  </view>
 </view>
