--- a/pages/setting/setting.wxml
+++ b/pages/setting/setting.wxml
@@ -6,20 +6,20 @@
   <!-- 列表项 -->
   <view class="weui-cells__title">带跳转的列表项</view>
   <view class="weui-cells weui-cells_after-title">
-    <navigator url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+    <navigator url="feedback" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
       <!-- <button class="weui-cell__bd" open-type="feedback">意见反馈</button> -->
-      <view class="weui-cell__bd" open-type="feedback">意见反馈</view>
-      <view class="weui-cell__ft weui-cell__ft_in-access"></view>
+      <view class="weui-cell__bd">意见反馈</view>
+      <!-- <view class="weui-cell__ft weui-cell__ft_in-access"></view> -->
     </navigator>
   </view>
 
   <view class="weui-cells__title">带说明、跳转的列表项</view>
   <view class="weui-cells weui-cells_after-title">
-    <picker bindchange="bindPickerChange" value="{{index}}" range="{{objectArray}}" range-key="name">
-      <navigator url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+    <picker bindchange="bindPickerChange" value="{{hitokotoType}}" range="{{hitokotoTypes}}" range-key="name">
+      <view url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
         <view class="weui-cell__bd">一言分类</view>
-        <view class="weui-cell__ft weui-cell__ft_in-access">{{objectArray[index].name}}</view>
-      </navigator>
+        <view class="weui-cell__ft weui-cell__ft_in-access">{{hitokotoType.name}}</view>
+      </view>
     </picker>
   </view>
 
