修改设置界面

--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -19,7 +19,7 @@
     </view>
   </refresh>
   <!-- 控制界面 -->
-  <view class="control-container">
+  <view class="control-container" bindtap="onCancel">
     <image class="control-setting" src="../../public/image/ic_avatar.svg" bindtap="onSetting"></image>
   </view>
 </view>
