完成请求一言分类设置功能

--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -20,6 +20,6 @@
   </refresh>
   <!-- 控制界面 -->
   <view class="control-container" bindtap="onCancel">
-    <image class="control-setting" src="../../public/image/ic_avatar.svg" bindtap="onSetting"></image>
+    <image class="control-setting" src="../../public/image/ic_add.svg" bindtap="onSetting"></image>
   </view>
 </view>
