--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -14,14 +14,14 @@
   display: flex;
   flex-direction: column;
   align-items: right;
-  padding: 24rpx;
+  padding: 12px;
 }
 
 .talk-quote-top, .talk-quote-bottom {
-  width: 36rpx;
-  height: 36rpx;
-  margin-top: 8rpx;
-  margin-bottom: 8rpx;
+  width: 12px;
+  height: 12px;
+  margin-top: 4px;
+  margin-bottom: 4px;
 }
 
 .talk-quote-bottom-container {
@@ -37,21 +37,21 @@
 
 .talk-decoration {
   width: 100%;
-  height: 1rpx;
+  height: 1px;
   background: #d8d8d8;
 }
 
 .talk-hitokoto {
-  font-size: 36rpx;
-  margin-left: 28rpx;
-  margin-right: 28rpx;
+  font-size: 16px;
+  margin-left: 16px;
+  margin-right: 16px;
 }
 
 /* 出处  */
 
 .talk-from-container {
   position: fixed;
-  bottom: 144rpx;
+  bottom: 56px;
   width: 100%;
   justify-content: center;
   background: bisque;
@@ -61,7 +61,7 @@
   position: fixed;
   width: 100%;
   text-align: center;
-  font-size: 24rpx;
+  font-size: 10px;
 }
 
 /* 控制部分 */
@@ -75,11 +75,11 @@
 
 .control-setting {
   position: fixed;
-  bottom: 36rpx;
-  right: 36rpx;
-  width: 56rpx;
-  height: 56rpx;
+  bottom: 16px;
+  right: 16px;
+  width: 20px;
+  height: 20px;
+  padding: 8px;
   border-radius: 50%;
-  border: 1rpx solid #e0e0e0;
   background: #e8e8e8;
 }
