--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -42,7 +42,8 @@
 }
 
 .talk-hitokoto {
-  font-size: 16px;
+  font-size: 18px;
+  font-weight: bold;
   margin-left: 16px;
   margin-right: 16px;
 }
@@ -69,14 +70,11 @@
 .control-container {
   position: fixed;
   display: block;
-  width: 100%;
-  height: 100%;
-}
-
-.control-setting {
-  position: fixed;
   bottom: 16px;
   right: 16px;
+}
+
+.control-icon {
   width: 20px;
   height: 20px;
   padding: 8px;
