简单调整界面展示及分享图绘制

--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -2,26 +2,26 @@
 
 <view class="page">
   <!-- 一句话 -->
-  <refresh scrollHeight="{{scrollHeight}}" isRefreshFinish="{{isRefreshFinish}}" bindonRefresh="onRefresh">
+  <refresh scrollHeight="{{scrollHeight}}" isRefreshFinish="{{isRefreshFinish}}" bindonRefresh="handleRefresh">
     <view class="talk-container">
       <view class="talk-hitokoto-container">
         <view class="talk-decoration" />
         <image class="talk-quote-top" src="../../public/image/ic_quote.svg" />
-        <text class="talk-hitokoto">{{talk.hitokoto}}</text>
+        <text class="talk-hitokoto" bindlongtap="handleCopy">{{talk.hitokoto}}</text>
         <view class="talk-quote-bottom-container">
           <image class="talk-quote-bottom" src="../../public/image/ic_quote.svg" />
         </view>
         <view class="talk-decoration" />
       </view>
       <view class="talk-from-container">
-        <text class="talk-from">{{talk.from}}</text>
+        <text wx:if="{{showFrom}}" class="talk-from">{{talk.from}}</text>
       </view>
     </view>
   </refresh>
   <!-- 控制界面 -->
   <view class="control-container">
-    <image class="control-icon icon-setting" src="../../public/image/ic_add.svg" bindtap="onSetting"></image>
-    <image class="control-icon icon-share" src="../../public/image/ic_share.svg" bindtap="onShare"></image>
+    <image class="control-icon icon-share" src="../../public/image/ic_share.svg" bindtap="handleShare"></image>
+    <image class="control-icon icon-setting" src="../../public/image/ic_setting.svg" bindtap="handleSetting"></image>
   </view>
 
   <!-- 自定义分享组件 -->
