--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -41,7 +41,7 @@
 }
 
 .talk-hitokoto {
-  font-size: 18px;
+  font-size: 20px;
   font-weight: bold;
   margin-left: 16px;
   margin-right: 16px;
@@ -67,6 +67,12 @@
 
 /* 控制部分 */
 
+.page-control {
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+}
+
 .control-icon {
   width: 24px;
   height: 24px;
@@ -74,7 +80,8 @@
   border-radius: 50%;
   background: #f8f8f8;
 }
-.control-icon:active{
+
+.control-icon:active {
   background: #e8e8e8;
 }
 
